--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
   <section class="about-the-platform container my-5">
     <!-- <h3>The platform</h3> -->
     <div class="row">
-      <div class="col-sm-4 col-md info-tile">
+      <div class="col-sm-4 col-md-5 col-lg info-tile">
         <div class="bg-image nft-hub">
         </div>
         <div class="tile-content">
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 col-md info-tile">
+      <div class="col-sm-4 col-md-5 col-lg info-tile">
         <div class="bg-image creative">
         </div>
         <div class="tile-content">
@@ -34,7 +34,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 col-md info-tile">
+      <div class="col-sm-4 col-md-5 col-lg info-tile">
         <div class="bg-image launchpad">
         </div>
         <div class="tile-content">
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="col-sm-4 col-md info-tile">
+      <div class="col-sm-4 col-md-5 col-lg info-tile">
         <div class="bg-image lighthouse">
         </div>
         <div class="tile-content">
