--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
-  <a class="navbar-brand" href="#"><img src="../../assets/adalyst-logo.png" alt=""></a>
+  <a class="navbar-brand" href="#"><img [src]="'assets/adalystlogo.png'" alt=""></a>
 
   <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
